changing index.html favicon link

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Sing as One</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="../favicon.png">
+    <link rel="icon" type="image/x-icon" href="./favicon.png">
     <!-- Style Link -->
     <link rel="stylesheet" href="style.css">
 </head>
